# protspace_web

./: .gitignore  .prettierrc  CONTRIBUTING.md  README.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  knip.jsonc  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.changeset/: centralized-url-config.md  empty-llamas-stop.md  shared-navigation-config.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-example.yml  deploy.yml  e2e.yml  publish-images.yml
.husky/: pre-commit
app/: index.html  package.json  tailwind.config.ts  tsconfig.e2e.json  tsconfig.json  vite.config.ts  vitest.config.ts
app/public/: 404.html  CNAME  data.parquetbundle
app/src/: App.tsx  (+5 more)
config/: Caddy.Dockerfile  Caddyfile.dev  Caddyfile.example  Caddyfile.prod  README.md  navigation.ts  urls.ts
docs/: index.md
notebooks/: ProtSpace_Preparation.ipynb  README.md
perf/: .gitignore  README.md  playwright.config.ts  plot_perf_results.py  pyproject.toml  webgl-perf.spec.ts
scripts/: check-messaging-guardrails.ts  deploy-vm.sh  update-vm.sh
services/protspace-prep/: .gitignore  Dockerfile  README.md  pyproject.toml
services/protspace-prep/src/protspace_prep/: api.py  app.py  config.py  jobs.py  pipeline.py  sse.py  validation.py
services/protspace-prep/tests/: conftest.py  test_api.py  test_app.py  test_jobs.py  test_pipeline.py  test_sse.py  test_validation.py
services/protspace-prep/tests/fixtures/: small.fasta
(+190 files in other folders)
